--- a/Html Files/biblio.html
+++ b/Html Files/biblio.html
@@ -2,22 +2,22 @@
 <html>
      <head>
         <title>Computing for the Social Good</title>
-        <link rel="stylesheet" href="../Style Files/header.css">
-        <link rel="stylesheet" href="../Style Files/homeStyle.css">
-        <link rel="stylesheet" href="../Style Files/footer.css">
-        <link rel="stylesheet" href="../Style Files/projectStyle.css">
-        <link rel="stylesheet" href="../Style Files/biblioStyle.css">
+        <link rel="stylesheet" href="Style Files/header.css">
+        <link rel="stylesheet" href="Style Files/homeStyle.css">
+        <link rel="stylesheet" href="Style Files/footer.css">
+        <link rel="stylesheet" href="Style Files/projectStyle.css">
+        <link rel="stylesheet" href="Style Files/biblioStyle.css">
 
     </head>
 
     <body>
         <header class="header">
             <div class="logo">
-                <a href="index.html">CSG</a>
+                <a href="../index.html">CSG</a>
             </div>
 
             <nav class="pageNavigation">
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="projects.html">Projects</a>
                 <a href="datasets.html">Datasets</a>
                 <a href="biblio.html">References</a>
