--- a/Html Files/biblio.html
+++ b/Html Files/biblio.html
@@ -2,11 +2,11 @@
 <html>
      <head>
         <title>Computing for the Social Good</title>
-        <link rel="stylesheet" href="Style Files/header.css">
-        <link rel="stylesheet" href="Style Files/homeStyle.css">
-        <link rel="stylesheet" href="Style Files/footer.css">
-        <link rel="stylesheet" href="Style Files/projectStyle.css">
-        <link rel="stylesheet" href="Style Files/biblioStyle.css">
+        <link rel="stylesheet" href="../Style Files/header.css">
+        <link rel="stylesheet" href="../Style Files/homeStyle.css">
+        <link rel="stylesheet" href="../Style Files/footer.css">
+        <link rel="stylesheet" href="../Style Files/projectStyle.css">
+        <link rel="stylesheet" href="../Style Files/biblioStyle.css">
 
     </head>
 
