--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="imageContent1">
-                <img src="../webImages/welcome.jpg" alt="Code on Computer">
+                <img src="webImages/welcome.jpg" alt="Code on Computer">
             </div>
 
         </div>
@@ -67,7 +67,7 @@
 
             <div class="FeaturedProjectRow">
                 <div class="imageText">
-                    <img src="../webImages/solar.jpg" alt="Solar Panels">
+                    <img src="webImages/solar.jpg" alt="Solar Panels">
 
                     <div class="linkTitle">
                         <a href="https://drive.google.com/drive/folders/18gJkhOr1rUd9qZK5dMdJIa2NhE5s38sB?usp=sharing" 
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="imageText">
-                    <img src="../webImages/butterfly.jpg" alt="A monarch butterfly">
+                    <img src="webImages/butterfly.jpg" alt="A monarch butterfly">
 
                     <div class="linkTitle">
                         <a href="https://drive.google.com/drive/folders/1u5l1daC4cPKIOHr1J-mm2AZUFzTGqdB_?usp=sharing" 
@@ -101,7 +101,7 @@
                 </div>
                 
                 <div class="imageText">
-                    <img src="../webImages/cholesterol.jpg" alt="Health Tracking">
+                    <img src="webImages/cholesterol.jpg" alt="Health Tracking">
 
                     
                      <div class="linkTitle">
