--- a/Html Files/projects.html
+++ b/Html Files/projects.html
@@ -261,6 +261,17 @@
         
             </div>
         </div>
+        
+        <div class="footer">
+
+            <div class="endTitle">
+                <h1>Computing for the Social <br>Good</h1>
+                <h4>Denison University Computer Science</h4>
+                <h4>goldweberm@denison.edu</h4>
+                <h4>740-587-6259</h4>
+            </div>
+
+        </div>
 
     </body>
 </html>
