--- a/Html Files/biblio.html
+++ b/Html Files/biblio.html
@@ -13,11 +13,11 @@
     <body>
         <header class="header">
             <div class="logo">
-                <a href="../index.html">CSG</a>
+                <a href="index.html">CSG</a>
             </div>
 
             <nav class="pageNavigation">
-                <a href="../index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="projects.html">Projects</a>
                 <a href="datasets.html">Datasets</a>
                 <a href="biblio.html">References</a>
@@ -27,7 +27,7 @@
         </header>
         
         <div class="pageWelcome">
-            <h1>Bibliography</h1>
+            <h1>References</h1>
             <p class="subHeading">
                 Browse our collection of sources below
             </p>
@@ -161,7 +161,7 @@
             </div>
         </div>
 
-         <div class="footer">
+        <div class="footer">
 
             <div class="endTitle">
                 <h1>Computing for the Social <br>Good</h1>
@@ -171,6 +171,7 @@
             </div>
 
         </div>
+        
     </body>
 
 </html>
