--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Computing for the Social Good</title>
-        <link rel="stylesheet" href="Style Files/header.css">
-        <link rel="stylesheet" href="Style Files/homeStyle.css">
-        <link rel="stylesheet" href="Style Files/footer.css">
-        <link rel="stylesheet" href="Style Files/biblioStyle.css">
-        <link rel="stylesheet" href="Style Files/projectStyle.css">
+        <link rel="stylesheet" href="../Style Files/header.css">
+        <link rel="stylesheet" href="../Style Files/homeStyle.css">
+        <link rel="stylesheet" href="../Style Files/footer.css">
+        <link rel="stylesheet" href="../Style Files/biblioStyle.css">
+        <link rel="stylesheet" href="../Style Files/projectStyle.css">
     </head>
 
     <body>
@@ -17,9 +17,9 @@
 
             <nav class="pageNavigation">
                 <a href="index.html">Home</a>
-                <a href="Html Files/projects.html">Projects</a>
-                <a href="Html Files/datasets.html">Datasets</a>
-                <a href="Html Files/biblio.html">References</a>
+                <a href="projects.html">Projects</a>
+                <a href="datasets.html">Datasets</a>
+                <a href="biblio.html">References</a>
             </nav>
 
 
@@ -54,7 +54,7 @@
             </div>
 
             <div class="imageContent1">
-                <img src="webImages/welcome.jpg" alt="Code on Computer">
+                <img src="../webImages/welcome.jpg" alt="Code on Computer">
             </div>
 
         </div>
@@ -67,7 +67,7 @@
 
             <div class="FeaturedProjectRow">
                 <div class="imageText">
-                    <img src="webImages/solar.jpg" alt="Solar Panels">
+                    <img src="../webImages/solar.jpg" alt="Solar Panels">
 
                     <div class="linkTitle">
                         <a href="https://drive.google.com/drive/folders/18gJkhOr1rUd9qZK5dMdJIa2NhE5s38sB?usp=sharing" 
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="imageText">
-                    <img src="webImages/butterfly.jpg" alt="A monarch butterfly">
+                    <img src="../webImages/butterfly.jpg" alt="A monarch butterfly">
 
                     <div class="linkTitle">
                         <a href="https://drive.google.com/drive/folders/1u5l1daC4cPKIOHr1J-mm2AZUFzTGqdB_?usp=sharing" 
@@ -101,7 +101,7 @@
                 </div>
                 
                 <div class="imageText">
-                    <img src="webImages/cholesterol.jpg" alt="Health Tracking">
+                    <img src="../webImages/cholesterol.jpg" alt="Health Tracking">
 
                     
                      <div class="linkTitle">
@@ -122,11 +122,20 @@
             <div class="top">
                 <h2>Start off your next Project <br>by exploring our collection 
                     <br>of Datasets from across the web</h2>
-                <h1>Intriguing <br>Datasets</h1>
+
+                <div class="linkTitleCenter">
+                    <a href="datasets.html">Intriguing Datasets</a>
+                </div>
+
             </div>
 
             <div class="middle">
-                <h2>Energy Consumption</h2>
+
+                <div class="linkTitle">
+                        <a href="https://corgis-edu.github.io/corgis/csv/energy/" 
+                        target="_blank">Energy Consumption</a>
+                    </div>
+
                 <p>This expansive data set from the US Energy Information Administration 
                     contains data on several energy production methods, the consumption by 
                     commercial industries, and the cost associated with the entire process.</p>
@@ -134,14 +143,24 @@
 
             <div class="bottom">
                 <div class="leftLinkText">
-                    <h2>Heart Disease</h2>
+
+                    <div class="linkTitle">
+                        <a href="https://www.kaggle.com/datasets/oktayrdeki/heart-disease" 
+                        target="_blank">Heart Disease</a>
+                    </div>
+
                     <p>This Kaggle.com publication presents data on risk factors related to 
                         heart disease. One of our projects uses this data to develop a model that 
                         informs the user if they are at risk for contracting this illness.</p>
                 </div>
 
                 <div class="rightLinkText">
-                    <h2>Food Access</h2>
+
+                    <div class="linkTitle">
+                        <a href="https://www.kaggle.com/datasets/oktayrdeki/heart-disease" 
+                        target="_blank">Food Access</a>
+                    </div>
+
                     <p>Acquired from the United States Department of Agriculture, this data set 
                         contains information about the US population and varying distances from residential 
                         areas to the closest grocery store.</p>
@@ -151,7 +170,10 @@
         </div>
 
         <div class="bibSection">
-            <h1>Bibliography</h1>
+            <div class="linkTitleCenter">
+                    <a href="biblio.html">Cited References</a>
+            </div>
+
             <div class="bibFormat">
                 <h2>Computational Perspectives on Social Good and Access to Opportunity</h2>
                 <p>Abebe, Rediet. "Computational Perspectives on Social Good and Access to Opportunity." 
@@ -169,7 +191,9 @@
             </div>
 
             <div class="centered">
-                <h2>Explore More</h2>
+                <div class="linkTitleCenter">
+                    <a href="biblio.html">Explore More</a>
+                </div>
             </div>
         </div>
 
