--- a/Html Files/datasets.html
+++ b/Html Files/datasets.html
@@ -12,11 +12,11 @@
 
         <header class="header">
             <div class="logo">
-                <a href="../index.html">CSG</a>
+                <a href="index.html">CSG</a>
             </div>
 
             <nav class="pageNavigation">
-                <a href="../index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="projects.html">Projects</a>
                 <a href="datasets.html">Datasets</a>
                 <a href="biblio.html">References</a>
@@ -160,7 +160,7 @@
 
         </div>
         
-       <div class="footer">
+        <div class="footer">
 
             <div class="endTitle">
                 <h1>Computing for the Social <br>Good</h1>
@@ -170,6 +170,6 @@
             </div>
 
         </div>
-
+       
     </body>
 </html>
