--- a/Html Files/projects.html
+++ b/Html Files/projects.html
@@ -13,11 +13,11 @@
 
         <header class="header">
             <div class="logo">
-                <a href="../index.html">CSG</a>
+                <a href="index.html">CSG</a>
             </div>
 
             <nav class="pageNavigation">
-                <a href="../index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="projects.html">Projects</a>
                 <a href="datasets.html">Datasets</a>
                 <a href="biblio.html">References</a>
@@ -261,7 +261,7 @@
         
             </div>
         </div>
-        
+
         <div class="footer">
 
             <div class="endTitle">
