--- a/Html Files/biblio.html
+++ b/Html Files/biblio.html
@@ -13,11 +13,11 @@
     <body>
         <header class="header">
             <div class="logo">
-                <a href="index.html">CSG</a>
+                <a href="../index.html">CSG</a>
             </div>
 
             <nav class="pageNavigation">
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="projects.html">Projects</a>
                 <a href="datasets.html">Datasets</a>
                 <a href="biblio.html">References</a>
