--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Computing for the Social Good</title>
-        <link rel="stylesheet" href="../Style Files/header.css">
-        <link rel="stylesheet" href="../Style Files/homeStyle.css">
-        <link rel="stylesheet" href="../Style Files/footer.css">
-        <link rel="stylesheet" href="../Style Files/biblioStyle.css">
-        <link rel="stylesheet" href="../Style Files/projectStyle.css">
+        <link rel="stylesheet" href="Style Files/header.css">
+        <link rel="stylesheet" href="Style Files/homeStyle.css">
+        <link rel="stylesheet" href="Style Files/footer.css">
+        <link rel="stylesheet" href="Style Files/biblioStyle.css">
+        <link rel="stylesheet" href="Style Files/projectStyle.css">
     </head>
 
     <body>
@@ -17,9 +17,9 @@
 
             <nav class="pageNavigation">
                 <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
-                <a href="datasets.html">Datasets</a>
-                <a href="biblio.html">References</a>
+                <a href="Html Files/projects.html">Projects</a>
+                <a href="Html Files/datasets.html">Datasets</a>
+                <a href="Html Files/biblio.html">References</a>
             </nav>
 
 
@@ -54,7 +54,7 @@
             </div>
 
             <div class="imageContent1">
-                <img src="../webImages/welcome.jpg" alt="Code on Computer">
+                <img src="webImages/welcome.jpg" alt="Code on Computer">
             </div>
 
         </div>
@@ -62,12 +62,12 @@
         <div class="content2">
 
             <div class="linkTitleCenter">
-                <a href="projects.html">Featured Projects</a>
+                <a href="Html Files/projects.html">Featured Projects</a>
             </div>
 
             <div class="FeaturedProjectRow">
                 <div class="imageText">
-                    <img src="../webImages/solar.jpg" alt="Solar Panels">
+                    <img src="webImages/solar.jpg" alt="Solar Panels">
 
                     <div class="linkTitle">
                         <a href="https://drive.google.com/drive/folders/18gJkhOr1rUd9qZK5dMdJIa2NhE5s38sB?usp=sharing" 
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="imageText">
-                    <img src="../webImages/butterfly.jpg" alt="A monarch butterfly">
+                    <img src="webImages/butterfly.jpg" alt="A monarch butterfly">
 
                     <div class="linkTitle">
                         <a href="https://drive.google.com/drive/folders/1u5l1daC4cPKIOHr1J-mm2AZUFzTGqdB_?usp=sharing" 
@@ -101,7 +101,7 @@
                 </div>
                 
                 <div class="imageText">
-                    <img src="../webImages/cholesterol.jpg" alt="Health Tracking">
+                    <img src="webImages/cholesterol.jpg" alt="Health Tracking">
 
                     
                      <div class="linkTitle">
@@ -124,7 +124,7 @@
                     <br>of Datasets from across the web</h2>
 
                 <div class="linkTitleCenter">
-                    <a href="datasets.html">Intriguing Datasets</a>
+                    <a href="Html Files/datasets.html">Intriguing Datasets</a>
                 </div>
 
             </div>
@@ -171,7 +171,7 @@
 
         <div class="bibSection">
             <div class="linkTitleCenter">
-                    <a href="biblio.html">Cited References</a>
+                    <a href="Html Files/biblio.html">Cited References</a>
             </div>
 
             <div class="bibFormat">
@@ -192,7 +192,7 @@
 
             <div class="centered">
                 <div class="linkTitleCenter">
-                    <a href="biblio.html">Explore More</a>
+                    <a href="Html Files/biblio.html">Explore More</a>
                 </div>
             </div>
         </div>
